Day-17/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:<ACCOUNT_ID>:certificate/<CERT_ID>
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/group.name: balatraining
spec:
  ingressClassName: alb
  rules:
  - host: snake.balatraining.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-clusterip
            port:
              number: 80
  - host: ball.balatraining.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ball-app-svc
            port:
              number: 80
